--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{ page.title } - gelbooru-crawler</title>
+    <title>{{ page.title }} - gelbooru-crawler</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -13,7 +13,7 @@
     <footer>
         <div class="row-fluid">
             <div class="span12" style="text-align: center;">
-                gelbooru-crawler - { page.version }
+                gelbooru-crawler - {{ page.version }}
             </div>
         </div>
     </footer>
